--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="/nuvla-io/overview" id="navbarDropdownMenuLink-nuvla-io" aria-haspopup="true" aria-expanded="false">Nuvla.io</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-product" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More Products</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-product" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Software</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-products">
                   <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Software to turn your hardware into a Smart Edge Device</a>
                   <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla</b>: The open source software behind Nuvla.io</a>
