--- a/_layouts/nuvlabox-hardware.html
+++ b/_layouts/nuvlabox-hardware.html
@@ -20,7 +20,7 @@
       </section>
       <section class="mt-20 section-is-it-for">
         <div class="container">
-          <div class="row justify-content-center icon-is-it-for mt-50 mb-50">
+          <div class="row justify-content-center icon-is-it-for mb-50">
             {% assign height = "250px" %}
             {% for post in site.products-and-services %}
               {% if post.product == page.product %}
