--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -7,6 +7,11 @@
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
 		<!-- Start what do you get? -->	
+		<section class="section-intro-product">
+			<div class="container">
+        {{ page.content | markdownify }}
+			</div>
+		</section>
 		<section class="bg-white mt-20 section-do-you-get animated">
 			<div class="container">
 				<div class="row justify-content-center pt-50">
@@ -62,11 +67,6 @@
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
           <iframe width="540" height="304" src="https://www.youtube.com/embed/BHzbEDzyfnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
-			</div>
-		</section>
-		<section class="bg-white mt-20 section-is-it-for">
-			<div class="container">
-        {{ page.content }}
 			</div>
 		</section>
 		<!-- End Who is it for? -->	
