--- a/sass/theme/_section-product-intro.scss
+++ b/sass/theme/_section-product-intro.scss
@@ -1,10 +1,13 @@
 .section-intro-product {
   @extend .pt-50;  
   @extend .pb-50;  
-h2 {
-  @extend .pb-10;
-  @extend .fw700;
-}	
+  h2 {
+    @extend .pb-10;
+    @extend .fw700;
+  }	
+  img {
+    max-width: 100%;
+  }
 	.section-title {
 		float: left;
 		span{
