--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -10,12 +10,12 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/nuvla-io/overview" id="navbarDropdownMenuLink-nuvla-io" aria-haspopup="true" aria-expanded="false">Nuvla.io</a>
+                <a class="nav-link" href="/products-and-services/nuvla-io/overview" id="navbarDropdownMenuLink-nuvla-io" aria-haspopup="true" aria-expanded="false">Nuvla.io</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-product" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Software</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-products">
-                  <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Software to turn your hardware into a Smart Edge Device</a>
+                  <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Software that turns your hardware into a Smart Edge Device</a>
                   <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla</b>: The open source software behind Nuvla.io</a>
                 </div>
               </li>
