--- a/_includes/highlighted-with-image-item-no-truncation.html
+++ b/_includes/highlighted-with-image-item-no-truncation.html
@@ -1,6 +1,6 @@
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated {{ post.cssclass }}">
             {% if post.image %}
-              <img src="{{ post.image }}" alt="{{ post.title }}" width="100%">
+              <img src="{{ post.image }}" alt="{{ post.title }}" style="max-width: 60%; width: auto;">
             {% endif %}
             {% if post.icon %}
               <div class="icon-title">
