--- a/_layouts/casestudies-overview.html
+++ b/_layouts/casestudies-overview.html
@@ -6,11 +6,11 @@
 	<main>
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
-		<section class="mt-20 section-is-it-for">
+		<section class="mt-20 section-is-it-for bg-white">
 			<div class="container">
-				<div class="row justify-content-center pt-50">
+				<div class="row justify-content-center pt-50 pb-50">
 					<div class="col-md-12 section-title text-center">
-						<h2 class="pb-10 fw700">Discover how <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a> enables {{ page.product-name }}.</h2>
+						<h2 class="pb-10 fw700">Discover how <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a> enables {{ page.product-name }}</h2>
             {{ page.content | markdownify }}
 					</div>
 				</div>
@@ -31,7 +31,7 @@
 			<div class="container">
 				<div class="row justify-content-center pb-50 pt-50">
 					<div class="col-md-12 section-title text-center">
-							<h2 class="pb-10 fw700">Top benefits for this customer.</h2>
+							<h2 class="pb-10 fw700">Top benefits for this customer</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
