--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -36,6 +36,14 @@
 						<p class="mt-10 text-center">Read our latest thoughts.</p>
             <a class="btn-sixsq mt-20 color-3 text-center" href="https://media.sixsq.com/blog"><i class="far fa-plus-square"></i>  Read</a>
 					</div>
+					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
+            <div class="icon-title">
+              <i class="fas fa-book"></i>
+            </div>
+            <h3 class="mt-20 text-center fw600">Documentation</h3>
+						<p class="mt-10 text-center">Complete Nuvla.io documentation.</p>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="https://docs.nuvla.io"><i class="far fa-plus-square"></i>  Learn</a>
+					</div>
           <!-- <div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
               <i class="fas fa-book"></i>
