--- a/sass/theme/_variables.scss
+++ b/sass/theme/_variables.scss
@@ -16,12 +16,12 @@ $dark     		  		 : #000;
 $header-sticky       : #333;
 $color-dark          : #333;
 $p1-color            : rgba(255, 255, 255, 0.40);
-$nuvla-color         : #4A3D8D;
-$nuvlabox-color      : #F39314;
+$nuvla-color         : $color-primary;
+$nuvlabox-color      : $color-primary;
 $slipstream-color    : $color-primary;
-$nuvlacity-color     : #009051;
-$nuvlaoutpost-color  : #136697;
-$nuvlascience-color  : #9D6A1F;
+$nuvlacity-color     : $color-primary;
+$nuvlaoutpost-color  : $color-primary;
+$nuvlascience-color  : $color-primary;
 $hover-shadow        : 0px 25px 50px 0px rgba(0, 0, 0, 0.1);
 $hover-shadow-icon   : 0px 15px 30px 0px rgba(0, 0, 0, 0.1);
 $p2-shadow           : 0px 10px 15px rgba(219, 17, 17, 0.25);
