--- a/sass/theme/_banner.scss
+++ b/sass/theme/_banner.scss
@@ -33,45 +33,40 @@
 		@include mobile {
 		 	background: url(/img/banner/city.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.7) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.7);
+      padding-top: 20px;
+    }
 	}
 	&.banner-outpost {
 		background: url(/img/banner/outpost.png) no-repeat bottom center/cover;
 		@include mobile {
 		 	background: url(/img/banner/outpost.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.5) !important;
-		}
-    h2 {
-      background-color: transparentize(black, 0.5) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.5);
+      padding-top: 20px;
+    }
 	}
 	&.banner-retail {
 		background: url(/img/banner/retail.png) no-repeat bottom center/cover;
 		@include mobile {
 		 	background: url(/img/banner/retail.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.5) !important;
-		}
-    h2 {
-      background-color: transparentize(black, 0.5) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.5);
+      padding-top: 20px;
+    }
 	}
 	&.banner-science {
 		background: url(/img/banner/science.png) no-repeat bottom center/cover;
 		@include mobile {
 		 	background: url(/img/banner/science.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.5) !important;
-		}
-    h2 {
-      background-color: transparentize(black, 0.5) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.5);
+      padding-top: 20px;
+    }
 	}
 	&.banner-nuvlabox {
 		background: url(/img/banner/nuvlabox.png) no-repeat bottom center/cover;
@@ -108,60 +103,50 @@
 		@include mobile {
 		 	background: url(/img/banner/about.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.5) !important;
-		}
-    h2 {
-      background-color: transparentize(black, 0.5) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.5);
+      padding-top: 20px;
+    }
 	}
 	&.banner-media {
 		background: url(/img/banner/media.png) no-repeat bottom center/cover;
 		@include mobile {
 		 	background: url(/img/banner/media.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.5) !important;
-		}
-    h2 {
-      background-color: transparentize(black, 0.5) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.5);
+      padding-top: 20px;
+    }
 	}
 	&.banner-news {
 		background: url(/img/banner/media.png) no-repeat bottom center/cover;
 		@include mobile {
 		 	background: url(/img/banner/media.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.5) !important;
-		}
-    h2 {
-      background-color: transparentize(black, 0.5) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.5);
+      padding-top: 20px;
+    }
 	}
 	&.banner-videos {
 		background: url(/img/banner/media.png) no-repeat bottom center/cover;
 		@include mobile {
 		 	background: url(/img/banner/media.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.5) !important;
-		}
-    h2 {
-      background-color: transparentize(black, 0.5) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.5);
+      padding-top: 20px;
+    }
 	}
 	&.banner-terms {
 		background: url(/img/banner/terms.png) no-repeat bottom center/cover;
 		@include mobile {
 		 	background: url(/img/banner/terms.png) no-repeat;
 		}
-    p {
-      background-color: transparentize(black, 0.5) !important;
-		}
-    h2 {
-      background-color: transparentize(black, 0.5) !important;
-		}
+    .banner-content {
+      background-color: transparentize(black, 0.5);
+      padding-top: 20px;
+    }
 	}
 	.banner-content {
 		p {
