--- a/sass/theme/_section-services.scss
+++ b/sass/theme/_section-services.scss
@@ -282,6 +282,8 @@
 			font-size: 250%;
 			}
 			.line {
+        color: #333;
+				background: #333;
 				width: 50%;
 				text-align: left;
 			}
