--- a/_includes/highlighted-with-image-item-no-truncation.html
+++ b/_includes/highlighted-with-image-item-no-truncation.html
@@ -7,6 +7,7 @@
                 <i class="fa {{ post.icon }}"></i>
               </div>
             {% endif %}
-            <h3 class="mt-20 text-center fw600">{{ post.title }}</h3>
-						<p class="mt-10 text-center">{{ post.content | markdownify }}</p>
+            <h3 class="mt-20 mb-10 text-center fw600">{{ post.title }}</h3>
+            {% assign product-name = page.product-name %}
+            {{ post.content | replace: 'product-name', product-name }}
 					</div>
