--- a/_layouts/product-features.html
+++ b/_layouts/product-features.html
@@ -12,12 +12,12 @@
 			<div class="container">
 				<div class="row justify-content-center pb-50 pt-50">
 					<div class="col-md-12 section-title text-center">
-							<h2 class="pb-10 fw700">Discover the main features.</h2>
+							<h2 class="pb-10 fw700">Discover the main features</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
           {% for post in site.products-and-services %}
-            {% if post.product == page.product %}
+            {% if post.product == page.product or page.uberproduct == post.product %}
               {% if post.class == 'feature' %}
                 {% include highlighted-with-image-item-no-truncation.html %}
               {% endif %}
