--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -1,4 +1,7 @@
 .section-is-it-for {
+  img {
+    width: 100%;
+  }
 	.icon-is-it-for {
 		min-height: 450px;
     ol, ul {
@@ -40,9 +43,7 @@
 				font-size: 16px;
 				color: #aaa;
 				line-height: 25px;
-//        min-height: 150px;
 				@media (min-width: 768px) and (max-width: 992px) {
-//          min-height: 290px;
 				}			
 				a {
 					margin-left: auto;
