--- a/css/main.css
+++ b/css/main.css
@@ -1085,7 +1085,7 @@ td, th {
       min-height: 40px; }
     .section-is-it-for .icon-is-it-for .icon p {
       font-size: 16px;
-      color: #aaa;
+      color: #888;
       line-height: 25px; }
       .section-is-it-for .icon-is-it-for .icon p a {
         margin-left: auto;
