--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -41,7 +41,7 @@
 			}
 			p {
 				font-size: 16px;
-				color: #aaa;
+				color: #888;
 				line-height: 25px;
 				@media (min-width: 768px) and (max-width: 992px) {
 				}			
