--- a/_includes/standard-banner.html
+++ b/_includes/standard-banner.html
@@ -1,8 +1,8 @@
 		<!-- Start Banner -->
-		<section class="banner-page-int banner-{{ page.product }} pt-100 pb-100">
+		<section class="banner-page-int banner-{{ page.product }}">
 			<div class="container">
 				<div class="row">
-					<div class="banner-content col-md-12">
+					<div class="banner-content col-md-12 mt-100 mb-50">
 						<h2 class="text-white text-center mb-30">{{ page.title }}</h2>
 						<p class="text-white text-center">{{ page.summary }}</p>
 					</div>
