--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -64,9 +64,12 @@
 							<h2 class="pb-10 fw700">Here have a look.</h2>
 					</div>
 				</div>
-				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
-          <iframe width="540" height="304" src="https://www.youtube.com/embed/BHzbEDzyfnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
+        <div class="pt-20 pb-50">
+        <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/BHzbEDzyfnQ' frameborder='0' allowfullscreen></iframe></div>
+			</div>
+        <!-- <div class="row justify-content-center icon-is-it-for pb-50 pt-50">
+          <iframe src="https://www.youtube.com/embed/BHzbEDzyfnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div> -->
 			</div>
 		</section>
 		<!-- End Who is it for? -->	
