--- a/sass/theme/_section-product-is-it-for.scss
+++ b/sass/theme/_section-product-is-it-for.scss
@@ -2,6 +2,13 @@
   img {
     width: 100%;
   }
+  iframe {
+    width: 810px;
+    height: 456px;
+		@media (max-width: 767px) {
+			max-width: 100%;
+		}
+  }
 	.icon-is-it-for {
 		min-height: 450px;
     ol, ul {
@@ -56,7 +63,6 @@
 				min-height: inherit;
 			}
 		}
-
 	}
 }
 
@@ -73,7 +79,7 @@
     align-items: center;
     .top {
 //      align-self: flex-start;
-max-width: 80%;
+      max-width: 80%;
     }
     .center {
 //      align-self: center;
