Add Google Tage Manager and remove Google Analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,20 +1,17 @@
 <head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M77XBLH');</script>
+<!-- End Google Tag Manager -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="SixSq Sàrl">
 	<meta name="description" content="{% if page.summary %}{{ page.summary }}{% else %}{{ site.summary }}{% endif %}">
 	<meta name="keywords" content="{% if page.meta-keywords %}{{ page.meta-keywords }}{% else %}{{ site.keywords }}{% endif %}">
 	<meta charset="UTF-8">
 	<title>SixSq | {{ page.title }}</title>
-  <!-- Global Site Tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6461733-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-6461733-1');
-  </script>
-  <!-- End Google Analytics -->
   <script defer src="https://use.fontawesome.com/releases/v5.12.0/js/all.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.12.0/js/v4-shims.js"></script>
 
